--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc --noEmit -p tsconfig.app.json"
   },
   "dependencies": {
+    "cloudinary": "^2.8.0",
     "firebase": "^10.7.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
